# SpectrumWeaver

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: resources.py  resources_rc.py
resources/: resources.qrc
src/: spectrum_weaver.py
src/analyzers/: __init__.py  spectrum_analyzer.py
src/assets/: resources.qrc  styles.qss
src/gui/: __init__.py  custom_axes_items.py  custom_context_menu.py  custom_title_bar.py  drop_widget.py  spectrum_viewer.py
tests/: __init__.py  test_assets.py  test_spectrum_weaver.py
tests/analyzers/: __init__.py  test_spectrum_analyzer.py
tests/gui/: __init__.py  test_custom_axes_items.py  test_custom_context_menu.py  test_custom_title_bar.py  test_spectrum_viewer.py
tools/: build.bat  resources.bat  spectrum_weaver.spec
