[project]
name = "spectrumweaver"
version = "0.1.0"
description = "Acoustic spectrum analyzer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.12.3",
    "librosa>=0.11.0",
    "mutagen>=1.47.0",
    "numpy>=2.2.6",
    "pyqtgraph>=0.13.7",
    "pyside6==6.9.0",
    "pysidesix-frameless-window>=0.7.3",
]

[dependency-groups]
dev = [
    "auto-py-to-exe>=2.46.0",
    "pyinstaller>=6.14.1",
    "pytest>=8.4.1",
    "pytest-qt>=4.4.0",
]
